# kokoro_tts

./: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml  CMakeLists.txt  config.h
android/src/main/kotlin/dev/piusikeoffiah/flutter_kokoro_tts/: FlutterKokoroTtsPlugin.kt
assets/espeak-ng-data/: README.txt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: espeak_config.h  flutter_kokoro_tts.podspec  kokoro_tts.podspec
ios/Classes/espeak-ng/: espeak_bridge.c  espeak_bridge.h
ios/flutter_kokoro_tts/Sources/espeak_ng/: espeak_bridge.c
ios/flutter_kokoro_tts/Sources/flutter_kokoro_tts/: FlutterKokoroTts.swift
lib/: flutter_kokoro_tts.dart
lib/src/: espeak_ffi.dart  integrity_verifier.dart  kokoro_tts.dart  model_manager.dart  phonemizer.dart  text_cleaner.dart  text_preprocessor.dart
scripts/: README_espeak_data.md  build_espeak_data.sh
test/: README_TESTS.md  flutter_kokoro_tts_test.dart  integrity_verifier_test.dart  text_cleaner_test.dart  text_preprocessor_test.dart
(+4 files in other folders)
